# Auction-Analyzer

./: .clinerules  .gitignore  CONVENTIONS.md  PRD.md  alembic.ini  code-documentation.md  database-schema.md  items.db-shm  items.db-wal  pyproject.toml  realm_characters.json  realm_logs.json  start_api.ps1  update_data.ps1
aider_docs/: codebaseSummary.md  currentTask.md  projectRoadmap.md  techStack.md
auction_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cline_docs/: codebaseSummary.md  currentTask.md  projectRoadmap.md  techStack.md
cline_docs/api_specs/: api.md  realm_ranking_api.md
cline_docs/architecture/: database-schema.md  frontend-architecture.md
cline_docs/user_flows/: user-flow.md
docs/: backend.md  code-documentation.md  third-party-librairies.md  user-flow.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts  store.ts  utils.ts
scripts/: run_extraction.py
src/: __init__.py
src/api/: __init__.py  crud_groups.py  main.py
src/api/routes/: groups.py
src/database/: __init__.py  init_db.py  models.py  operations.py  schema.py
src/database/migrations/: env.py
src/database/scripts/: populate_raw_craft_cost.py  populate_spell_id.py  update_all_realm_populations.py  update_realm_logs.py
src/extractor/: __init__.py  api_client.py  main.py  rate_limiter.py
tests/: __init__.py  test_extension_parsing.py
wow_db_file/: ModifiedCraftingReagentSlot.11.1.0.59184.csv  SkillLineAbility.11.1.0.59095.csv  SpellReagents.11.1.0.59095.csv
(+31 files in other folders)
