[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auction-analyzer"
version = "0.1.0"
description = "Auction Analyzer for World of Warcraft"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "sqlalchemy-utils>=0.41.0",
    "alembic>=1.13.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "pandas>=2.2.0",
]

[tool.setuptools]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
